Closed Bug 1632207 Opened 4 years ago Closed 4 years ago

Intermittent /builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h:50:38: error: member access into incomplete type 'mozilla::dom::DOMSVGLength'

Categories

(Core :: Disability Access APIs, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: surkov)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: dluca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=298842991&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/FiRReiH7T3691RAJU3W23g/runs/0/artifacts/public/logs/live_backing.log


INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o UnifiedBindings16.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DGOOGLE_PROTOBUF_NO_RTTI -DGOOGLE_PROTOBUF_NO_STATIC_INITIALIZER -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DHAVE_SIDEBAR -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/bindings -I/builds/worker/workspace/obj-build/dom/bindings -I/builds/worker/workspace/obj-build/dist/include/mozilla/dom -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/battery -I/builds/worker/checkouts/gecko/dom/canvas -I/builds/worker/checkouts/gecko/dom/geolocation -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/dom/indexedDB -I/builds/worker/checkouts/gecko/dom/media/webaudio -I/builds/worker/checkouts/gecko/dom/media/webspeech/recognition -I/builds/worker/checkouts/gecko/dom/svg -I/builds/worker/checkouts/gecko/dom/xml -I/builds/worker/checkouts/gecko/dom/xslt/base -I/builds/worker/checkouts/gecko/dom/xslt/xpath -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/checkouts/gecko/js/xpconnect/src -I/builds/worker/checkouts/gecko/js/xpconnect/wrappers -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/xul/tree -I/builds/worker/checkouts/gecko/media/mtransport -I/builds/worker/checkouts/gecko/media/webrtc -I/builds/worker/checkouts/gecko/media/webrtc/signaling/src/common/time_profiling -I/builds/worker/checkouts/gecko/media/webrtc/signaling/src/peerconnection -I/builds/worker/checkouts/gecko/media/webrtc/trunk -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/third_party/msgpack/include -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wno-error=shadow -Wno-maybe-uninitialized -fexperimental-new-pass-manager  -MD -MP -MF .deps/UnifiedBindings16.o.pp   UnifiedBindings16.cpp
[task 2020-04-22T14:50:19.826Z] 14:50:19     INFO -  In file included from UnifiedBindings16.cpp:2:
[task 2020-04-22T14:50:19.826Z] 14:50:19     INFO -  In file included from /builds/worker/workspace/obj-build/dom/bindings/SVGAnimatedLengthListBinding.cpp:4:
[task 2020-04-22T14:50:19.826Z] 14:50:19     INFO -  In file included from /builds/worker/checkouts/gecko/dom/svg/DOMSVGAnimatedLengthList.h:10:
[task 2020-04-22T14:50:19.826Z] 14:50:19     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/nsCycleCollectionParticipant.h:12:
[task 2020-04-22T14:50:19.826Z] 14:50:19     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/nsCycleCollectionNoteChild.h:14:
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/nsCycleCollectionTraversalCallback.h:12:
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/nsISupports.h:79:
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/nsISupportsUtils.h:17:
[task 2020-04-22T14:50:19.827Z] 14:50:19    ERROR -  /builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h:50:38: error: member access into incomplete type 'mozilla::dom::DOMSVGLength'
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -    static void Release(U* aPtr) { aPtr->Release(); }
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -                                       ^
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h:381:62: note: in instantiation of member function 'mozilla::RefPtrTraits<mozilla::dom::DOMSVGLength>::Release' requested here
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -      static void Release(U* aPtr) { mozilla::RefPtrTraits<U>::Release(aPtr); }
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -                                                               ^
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h:81:37: note: in instantiation of member function 'RefPtr<mozilla::dom::DOMSVGLength>::ConstRemovingRefPtrTraits<mozilla::dom::DOMSVGLength>::Release' requested here
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -        ConstRemovingRefPtrTraits<T>::Release(mRawPtr);
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -                                      ^
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -  /builds/worker/checkouts/gecko/dom/svg/DOMSVGLengthList.h:127:36: note: in instantiation of member function 'RefPtr<mozilla::dom::DOMSVGLength>::~RefPtr' requested here
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -      RefPtr<DOMSVGLength> ignored = ReplaceItem(newValue, index, error);
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -                                     ^
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/dom/SVGLengthBinding.h:17:7: note: forward declaration of 'mozilla::dom::DOMSVGLength'
[task 2020-04-22T14:50:19.827Z] 14:50:19     INFO -  class DOMSVGLength;
[task 2020-04-22T14:50:19.828Z] 14:50:19     INFO -        ^
[task 2020-04-22T14:50:19.828Z] 14:50:19     INFO -  1 error generated.
[task 2020-04-22T14:50:19.828Z] 14:50:19     INFO -  /builds/worker/checkouts/gecko/config/rules.mk:750: recipe for target 'UnifiedBindings16.o' failed
[task 2020-04-22T14:50:19.828Z] 14:50:19    ERROR -  make[4]: *** [UnifiedBindings16.o] Error 1
[task 2020-04-22T14:50:19.828Z] 14:50:19     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/bindings'
[task 2020-04-22T14:50:19.828Z] 14:50:19     INFO -  make[4]: *** Waiting for unfinished jobs....
[task 2020-04-22T14:50:19.828Z] 14:50:19     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/events'
[task 2020-04-22T14:50:19.828Z] 14:50:19     INFO -  dom/events/Unified_cpp_dom_events2.o
[task 2020-04-22T14:50:19.828Z] 14:50:19     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/events'
[task 2020-04-22T14:50:21.332Z] 14:50:21     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/canvas'
[task 2020-04-22T14:50:21.335Z] 14:50:21     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o Unified_cpp_dom_canvas5.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/canvas -I/builds/worker/workspace/obj-build/dom/canvas -I/builds/worker/checkouts/gecko/js/xpconnect/wrappers -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/dom/svg -I/builds/worker/checkouts/gecko/dom/workers -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/checkouts/gecko/gfx/angle/checkout/include -I/builds/worker/checkouts/gecko/gfx/gl -I/builds/worker/checkouts/gecko/image -I/builds/worker/checkouts/gecko/js/xpconnect/src -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/media/libyuv/libyuv/include -I/builds/worker/checkouts/gecko/gfx/skia -I/builds/worker/checkouts/gecko/gfx/skia/skia -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -I/builds/worker/workspace/obj-build/dist/include/cairo -Wno-error=shadow -Wno-missing-braces -Werror=implicit-int-conversion -fexperimental-new-pass-manager  -MD -MP -MF .deps/Unified_cpp_dom_canvas5.o.pp   Unified_cpp_dom_canvas5.cpp
[task 2020-04-22T14:50:21.335Z] 14:50:21     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/canvas'
[task 2020-04-22T14:50:21.337Z] 14:50:21     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/events'
[task 2020-04-22T14:50:21.337Z] 14:50:21     INFO -  dom/events/Unified_cpp_dom_events3.o
[task 2020-04-22T14:50:21.337Z] 14:50:21     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/events'
[task 2020-04-22T14:50:22.531Z] 14:50:22     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/bindings'
[task 2020-04-22T14:50:22.531Z] 14:50:22     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o UnifiedBindings13.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DGOOGLE_PROTOBUF_NO_RTTI -DGOOGLE_PROTOBUF_NO_STATIC_INITIALIZER -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DHAVE_SIDEBAR -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/bindings -I/builds/worker/workspace/obj-build/dom/bindings -I/builds/worker/workspace/obj-build/dist/include/mozilla/dom -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/battery -I/builds/worker/checkouts/gecko/dom/canvas -I/builds/worker/checkouts/gecko/dom/geolocation -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/dom/indexedDB -I/builds/worker/checkouts/gecko/dom/media/webaudio -I/builds/worker/checkouts/gecko/dom/media/webspeech/recognition -I/builds/worker/checkouts/gecko/dom/svg -I/builds/worker/checkouts/gecko/dom/xml -I/builds/worker/checkouts/gecko/dom/xslt/base -I/builds/worker/checkouts/gecko/dom/xslt/xpath -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/checkouts/gecko/js/xpconnect/src -I/builds/worker/checkouts/gecko/js/xpconnect/wrappers -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/xul/tree -I/builds/worker/checkouts/gecko/media/mtransport -I/builds/worker/checkouts/gecko/media/webrtc -I/builds/worker/checkouts/gecko/media/webrtc/signaling/src/common/time_profiling -I/builds/worker/checkouts/gecko/media/webrtc/signaling/src/peerconnection -I/builds/worker/checkouts/gecko/media/webrtc/trunk -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/third_party/msgpack/include -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wno-error=shadow -Wno-maybe-uninitialized -fexperimental-new-pass-manager  -MD -MP -MF .deps/UnifiedBindings13.o.pp   UnifiedBindings13.cpp
[task 2020-04-22T14:50:22.531Z] 14:50:22     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/bindings'
[task 2020-04-22T14:50:22.547Z] 14:50:22     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/file'
[task 2020-04-22T14:50:22.548Z] 14:50:22     INFO -  mkdir -p '.deps/'
[task 2020-04-22T14:50:22.549Z] 14:50:22     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/file'
[task 2020-04-22T14:50:22.563Z] 14:50:22     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/file'
[task 2020-04-22T14:50:22.564Z] 14:50:22     INFO -  dom/file/Unified_cpp_dom_file0.o
[task 2020-04-22T14:50:22.565Z] 14:50:22     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/file'
[task 2020-04-22T14:50:25.081Z] 14:50:25     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/base'

Can you please take a look at this bug ?

Flags: needinfo?(mzehe)
Flags: needinfo?(bugs)
Regressed by: 1628418
Has Regression Range: --- → yes
Keywords: regression

Redirecting request to Surkov, who is the author of the original bug, I was just fulfilling the push request.

Flags: needinfo?(mzehe) → needinfo?(surkov.alexander)

feel confused how bug 1628418 can regress this one.

anyway, how about to move DOMSVGLengthList::IndexedSetter implementation into cpp file (https://searchfox.org/mozilla-central/source/dom/svg/DOMSVGLengthList.h#124-129)? It should help I suppose?

Flags: needinfo?(surkov.alexander)

cc'ing Emilio

That works, or add the missing include. Either way.

(In reply to Emilio Cobos Álvarez (:emilio) from comment #5)

That works,

ok, will file a patch then

or add the missing include. Either way.

DOMSVGLength.h already includes DOMSVGLengthList.h, so this approach shouldn't work

Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Flags: needinfo?(bugs)
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bdbe9a6fdd38
Intermittent bustage failure: member access into incomplete type 'mozilla::dom::DOMSVGLength' r=emilio
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: