Bug 1632207 - Intermittent bustage failure: member access into incomplete type 'mozilla::dom::DOMSVGLength' r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D72013